--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
-
+  body {
+  }
+  #c2 {
+  }
+  .qqcoisa {
+    float: left;
+    border :1px solid #444444;
+    padding:10px;
+    margin: 10px;
+    background:#3B3B3B;
+  }
 }
